---- Changes since 1.290 ----
The IMAP quota for users with access to Cyrus is now editable, rather than being fixed on  the Module Config page.
Added a Module Config option to display secondary groups as a text box, which makes more sense on systems with a large number of groups.
---- Changes since 1.310 ----
In a user batch file, # is only treated as a comment at the start of a line.
For Samba users, the primary group SID is taken from the actual SID of the selected primary group, where available.
---- Changes since 1.320 ----
Limit the result size to the configured display maximum when requesting users and groups from the LDAP server.
---- Changes since 1.350 ----
UID and GID allocation is now done by querying the LDAP server for specific IDs, rather than fetching a list of all users to find which ones are used. This should be faster on large LDAP servers.
---- Changes since 1.370 ----
All Samba attributes are removed when Samba access is disabled for a user.
---- Changes since 1.380 ----
Added access control options to prevent use of the same UID or GID.
---- Changes since 1.390 ----
Added locking to prevent concurrent writes to the LDAP database, to prevent UID collisions.
---- Changes since 1.400 ----
By default, all new Unix users are given the person object class too, as this seems to be needed in most new LDAP schemas.
Added support for LDAP SSHA passwords, thanks to Bill Moyers and John Gray.
---- Changes since 1.430 ----
The order of the first name and surname in the real name can be changed by a new Module Config setting.
Coverted all pages to use the new Webmin UI library, for a more consistent look. Also updated the groups chooser to use a left-right selector.
---- Changes since 1.440 ----
Added a Module Config option to allow / as an IMAP folder separator, thanks to Bas van den Heuvel.
Added a check on the module's main page to ensure that the LDAP schema is accessible.