@@ -24,3 +24,4 @@ given_class=inetOrgPerson
 person=1
 given_order=0
 imap_foldersep=.
+ldap_tls=0
